added background image

--- a/style.css
+++ b/style.css
@@ -1,1 +1,7 @@
+h1 {
+  color: rgb(33, 33, 119);
+}
 
+body {
+  background-image: url(https://openweathermap.org/themes/openweathermap/assets/img/shutterstock_298797602_1.jpg);
+}
