got buttons under the search bar to return results

--- a/style.css
+++ b/style.css
@@ -3,5 +3,5 @@ h1 {
 }
 
 body {
-  background-image: url(https://openweathermap.org/themes/openweathermap/assets/img/shutterstock_298797602_1.jpg);
+  background-image: url(https://www.pbs.org/wgbh/nova/media/images/decoding-the-weather-machine-hero_3KUxv2Z.width-1500.jpg);
 }
